Update function to handle edge cases

--- a/immo-project.ipynb
+++ b/immo-project.ipynb
@@ -35,14 +35,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Current working directory: /Users/tobiaskoller/Documents/ADS Projekt/ADS_Project_group3\n"
+      "Current working directory: c:\\Users\\FMeic\\data_science\\ADS_Project_group3\n"
      ]
     }
    ],
@@ -285,8 +285,6 @@
     }
    ],
    "source": [
-    "import pandas as pd\n",
-    "\n",
     "df_cleansing = pd.read_csv('immoscout24_zh_all_20240402.csv', sep=';')\n",
     "all_detailed_coreAttributes_list = df_cleansing['CoreAttributes'].tolist()\n",
     "all_detailed_features_list = df_cleansing['Features'].tolist()\n",
@@ -350,6 +348,270 @@
     "# Save the cleansed DataFrame to a new CSV file\n",
     "df_cleansing.to_csv('immoscout24_zh_cleansed.csv', index=False, sep=';')\n",
     "print('Data cleansing completed and saved to immoscout24_zh_all_20240402_cleansed.csv')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Compute new features\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Title</th>\n",
+       "      <th>Address</th>\n",
+       "      <th>Price</th>\n",
+       "      <th>Rooms</th>\n",
+       "      <th>SquareMeters</th>\n",
+       "      <th>Description</th>\n",
+       "      <th>URL</th>\n",
+       "      <th>Date</th>\n",
+       "      <th>0</th>\n",
+       "      <th>w</th>\n",
+       "      <th>...</th>\n",
+       "      <th>a</th>\n",
+       "      <th>f</th>\n",
+       "      <th>,</th>\n",
+       "      <th>]</th>\n",
+       "      <th>W</th>\n",
+       "      <th>u</th>\n",
+       "      <th>r</th>\n",
+       "      <th>I</th>\n",
+       "      <th>B</th>\n",
+       "      <th>e</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>\"Moderne Wohnung mit einzigartigem Panorama\"</td>\n",
+       "      <td>Bahnhofweg 1, 8302 Kloten</td>\n",
+       "      <td>2570.0</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>73.0</td>\n",
+       "      <td>Innovation, Komfort und Weitsicht - Wohnen in ...</td>\n",
+       "      <td>https://www.immoscout24.ch/mieten/4000939090</td>\n",
+       "      <td>2024-04-02</td>\n",
+       "      <td>{'Verfügbarkeit': '16.05.2024', 'Objekttyp': '...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>X</td>\n",
+       "      <td>X</td>\n",
+       "      <td>X</td>\n",
+       "      <td>X</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>X</td>\n",
+       "      <td>X</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>X</td>\n",
+       "      <td>X</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>\"ACHTUNG: Wohnperle sucht Mieter!\"</td>\n",
+       "      <td>Herrligweg 9, 8048 Zürich</td>\n",
+       "      <td>1921.0</td>\n",
+       "      <td>1.5</td>\n",
+       "      <td>26.0</td>\n",
+       "      <td>Wohnperle an ruhiger, zentraler Lage sucht Mie...</td>\n",
+       "      <td>https://www.immoscout24.ch/mieten/4000598194</td>\n",
+       "      <td>2024-04-02</td>\n",
+       "      <td>{'Verfügbarkeit': 'Sofort', 'Objekttyp': 'Wohn...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>X</td>\n",
+       "      <td>X</td>\n",
+       "      <td>X</td>\n",
+       "      <td>X</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>X</td>\n",
+       "      <td>X</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>X</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>\"ERSTVERMIETUNG - ruhig, grün, urban - erstkla...</td>\n",
+       "      <td>Poststrasse 47, 8953 Dietikon</td>\n",
+       "      <td>2830.0</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>104.0</td>\n",
+       "      <td>Per Herbst 2024 entstehen insgesamt 39 erstkla...</td>\n",
+       "      <td>https://www.immoscout24.ch/mieten/4000895944</td>\n",
+       "      <td>2024-04-02</td>\n",
+       "      <td>{'Verfügbarkeit': '01.10.2024', 'Objekttyp': '...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>X</td>\n",
+       "      <td>X</td>\n",
+       "      <td>X</td>\n",
+       "      <td>X</td>\n",
+       "      <td>X</td>\n",
+       "      <td>X</td>\n",
+       "      <td>X</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>X</td>\n",
+       "      <td>X</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>\"Hochwertig ausgebaute 3.5-Zimmerwohnung - B-1.1\"</td>\n",
+       "      <td>Im Steinacher 3, 8303 Bassersdorf</td>\n",
+       "      <td>2950.0</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>90.0</td>\n",
+       "      <td>Für Anspruchsvolle: hochwertig ausgebaute 3.5-...</td>\n",
+       "      <td>https://www.immoscout24.ch/mieten/4000679565</td>\n",
+       "      <td>2024-04-02</td>\n",
+       "      <td>{'Verfügbarkeit': 'Nach Vereinbarung', 'Objekt...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>X</td>\n",
+       "      <td>X</td>\n",
+       "      <td>X</td>\n",
+       "      <td>X</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>X</td>\n",
+       "      <td>X</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>X</td>\n",
+       "      <td>X</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>\"Erstvermietung Neubau Wohnungen an zentraler ...</td>\n",
+       "      <td>Widenstrasse 1, 8302 Kloten</td>\n",
+       "      <td>2950.0</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>92.0</td>\n",
+       "      <td>Wir vermieten per 1. Juli 2024 an ruhiger Lage...</td>\n",
+       "      <td>https://www.immoscout24.ch/mieten/4000823521</td>\n",
+       "      <td>2024-04-02</td>\n",
+       "      <td>{'Verfügbarkeit': '01.07.2024', 'Objekttyp': '...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>X</td>\n",
+       "      <td>X</td>\n",
+       "      <td>X</td>\n",
+       "      <td>X</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>X</td>\n",
+       "      <td>X</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>X</td>\n",
+       "      <td>X</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 57 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                               Title  \\\n",
+       "0       \"Moderne Wohnung mit einzigartigem Panorama\"   \n",
+       "1                 \"ACHTUNG: Wohnperle sucht Mieter!\"   \n",
+       "2  \"ERSTVERMIETUNG - ruhig, grün, urban - erstkla...   \n",
+       "3  \"Hochwertig ausgebaute 3.5-Zimmerwohnung - B-1.1\"   \n",
+       "4  \"Erstvermietung Neubau Wohnungen an zentraler ...   \n",
+       "\n",
+       "                             Address   Price Rooms  SquareMeters  \\\n",
+       "0          Bahnhofweg 1, 8302 Kloten  2570.0   2.5          73.0   \n",
+       "1          Herrligweg 9, 8048 Zürich  1921.0   1.5          26.0   \n",
+       "2      Poststrasse 47, 8953 Dietikon  2830.0   3.5         104.0   \n",
+       "3  Im Steinacher 3, 8303 Bassersdorf  2950.0   3.5          90.0   \n",
+       "4        Widenstrasse 1, 8302 Kloten  2950.0   3.5          92.0   \n",
+       "\n",
+       "                                         Description  \\\n",
+       "0  Innovation, Komfort und Weitsicht - Wohnen in ...   \n",
+       "1  Wohnperle an ruhiger, zentraler Lage sucht Mie...   \n",
+       "2  Per Herbst 2024 entstehen insgesamt 39 erstkla...   \n",
+       "3  Für Anspruchsvolle: hochwertig ausgebaute 3.5-...   \n",
+       "4  Wir vermieten per 1. Juli 2024 an ruhiger Lage...   \n",
+       "\n",
+       "                                            URL        Date  \\\n",
+       "0  https://www.immoscout24.ch/mieten/4000939090  2024-04-02   \n",
+       "1  https://www.immoscout24.ch/mieten/4000598194  2024-04-02   \n",
+       "2  https://www.immoscout24.ch/mieten/4000895944  2024-04-02   \n",
+       "3  https://www.immoscout24.ch/mieten/4000679565  2024-04-02   \n",
+       "4  https://www.immoscout24.ch/mieten/4000823521  2024-04-02   \n",
+       "\n",
+       "                                                   0    w  ...  a  f  ,  ]  \\\n",
+       "0  {'Verfügbarkeit': '16.05.2024', 'Objekttyp': '...  NaN  ...  X  X  X  X   \n",
+       "1  {'Verfügbarkeit': 'Sofort', 'Objekttyp': 'Wohn...  NaN  ...  X  X  X  X   \n",
+       "2  {'Verfügbarkeit': '01.10.2024', 'Objekttyp': '...  NaN  ...  X  X  X  X   \n",
+       "3  {'Verfügbarkeit': 'Nach Vereinbarung', 'Objekt...  NaN  ...  X  X  X  X   \n",
+       "4  {'Verfügbarkeit': '01.07.2024', 'Objekttyp': '...  NaN  ...  X  X  X  X   \n",
+       "\n",
+       "     W  u  r    I    B  e  \n",
+       "0  NaN  X  X  NaN    X  X  \n",
+       "1  NaN  X  X  NaN  NaN  X  \n",
+       "2    X  X  X  NaN    X  X  \n",
+       "3  NaN  X  X  NaN    X  X  \n",
+       "4  NaN  X  X  NaN    X  X  \n",
+       "\n",
+       "[5 rows x 57 columns]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_cleansing = pd.read_csv('immoscout24_zh_cleansed.csv', sep=';')\n",
+    "df_cleansing.head() "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# add the coordinates to the dataframe"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# add distance to train station"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "# geopy"
    ]
   },
   {
@@ -1716,7 +1978,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
