--- a/immo-project.ipynb
+++ b/immo-project.ipynb
@@ -359,233 +359,103 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Title</th>\n",
-       "      <th>Address</th>\n",
-       "      <th>Price</th>\n",
-       "      <th>Rooms</th>\n",
-       "      <th>SquareMeters</th>\n",
-       "      <th>Description</th>\n",
-       "      <th>URL</th>\n",
-       "      <th>Date</th>\n",
-       "      <th>0</th>\n",
-       "      <th>w</th>\n",
-       "      <th>...</th>\n",
-       "      <th>a</th>\n",
-       "      <th>f</th>\n",
-       "      <th>,</th>\n",
-       "      <th>]</th>\n",
-       "      <th>W</th>\n",
-       "      <th>u</th>\n",
-       "      <th>r</th>\n",
-       "      <th>I</th>\n",
-       "      <th>B</th>\n",
-       "      <th>e</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>\"Moderne Wohnung mit einzigartigem Panorama\"</td>\n",
-       "      <td>Bahnhofweg 1, 8302 Kloten</td>\n",
-       "      <td>2570.0</td>\n",
-       "      <td>2.5</td>\n",
-       "      <td>73.0</td>\n",
-       "      <td>Innovation, Komfort und Weitsicht - Wohnen in ...</td>\n",
-       "      <td>https://www.immoscout24.ch/mieten/4000939090</td>\n",
-       "      <td>2024-04-02</td>\n",
-       "      <td>{'Verfügbarkeit': '16.05.2024', 'Objekttyp': '...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>...</td>\n",
-       "      <td>X</td>\n",
-       "      <td>X</td>\n",
-       "      <td>X</td>\n",
-       "      <td>X</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>X</td>\n",
-       "      <td>X</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>X</td>\n",
-       "      <td>X</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>\"ACHTUNG: Wohnperle sucht Mieter!\"</td>\n",
-       "      <td>Herrligweg 9, 8048 Zürich</td>\n",
-       "      <td>1921.0</td>\n",
-       "      <td>1.5</td>\n",
-       "      <td>26.0</td>\n",
-       "      <td>Wohnperle an ruhiger, zentraler Lage sucht Mie...</td>\n",
-       "      <td>https://www.immoscout24.ch/mieten/4000598194</td>\n",
-       "      <td>2024-04-02</td>\n",
-       "      <td>{'Verfügbarkeit': 'Sofort', 'Objekttyp': 'Wohn...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>...</td>\n",
-       "      <td>X</td>\n",
-       "      <td>X</td>\n",
-       "      <td>X</td>\n",
-       "      <td>X</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>X</td>\n",
-       "      <td>X</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>X</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>\"ERSTVERMIETUNG - ruhig, grün, urban - erstkla...</td>\n",
-       "      <td>Poststrasse 47, 8953 Dietikon</td>\n",
-       "      <td>2830.0</td>\n",
-       "      <td>3.5</td>\n",
-       "      <td>104.0</td>\n",
-       "      <td>Per Herbst 2024 entstehen insgesamt 39 erstkla...</td>\n",
-       "      <td>https://www.immoscout24.ch/mieten/4000895944</td>\n",
-       "      <td>2024-04-02</td>\n",
-       "      <td>{'Verfügbarkeit': '01.10.2024', 'Objekttyp': '...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>...</td>\n",
-       "      <td>X</td>\n",
-       "      <td>X</td>\n",
-       "      <td>X</td>\n",
-       "      <td>X</td>\n",
-       "      <td>X</td>\n",
-       "      <td>X</td>\n",
-       "      <td>X</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>X</td>\n",
-       "      <td>X</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>\"Hochwertig ausgebaute 3.5-Zimmerwohnung - B-1.1\"</td>\n",
-       "      <td>Im Steinacher 3, 8303 Bassersdorf</td>\n",
-       "      <td>2950.0</td>\n",
-       "      <td>3.5</td>\n",
-       "      <td>90.0</td>\n",
-       "      <td>Für Anspruchsvolle: hochwertig ausgebaute 3.5-...</td>\n",
-       "      <td>https://www.immoscout24.ch/mieten/4000679565</td>\n",
-       "      <td>2024-04-02</td>\n",
-       "      <td>{'Verfügbarkeit': 'Nach Vereinbarung', 'Objekt...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>...</td>\n",
-       "      <td>X</td>\n",
-       "      <td>X</td>\n",
-       "      <td>X</td>\n",
-       "      <td>X</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>X</td>\n",
-       "      <td>X</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>X</td>\n",
-       "      <td>X</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>\"Erstvermietung Neubau Wohnungen an zentraler ...</td>\n",
-       "      <td>Widenstrasse 1, 8302 Kloten</td>\n",
-       "      <td>2950.0</td>\n",
-       "      <td>3.5</td>\n",
-       "      <td>92.0</td>\n",
-       "      <td>Wir vermieten per 1. Juli 2024 an ruhiger Lage...</td>\n",
-       "      <td>https://www.immoscout24.ch/mieten/4000823521</td>\n",
-       "      <td>2024-04-02</td>\n",
-       "      <td>{'Verfügbarkeit': '01.07.2024', 'Objekttyp': '...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>...</td>\n",
-       "      <td>X</td>\n",
-       "      <td>X</td>\n",
-       "      <td>X</td>\n",
-       "      <td>X</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>X</td>\n",
-       "      <td>X</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>X</td>\n",
-       "      <td>X</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 57 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                               Title  \\\n",
-       "0       \"Moderne Wohnung mit einzigartigem Panorama\"   \n",
-       "1                 \"ACHTUNG: Wohnperle sucht Mieter!\"   \n",
-       "2  \"ERSTVERMIETUNG - ruhig, grün, urban - erstkla...   \n",
-       "3  \"Hochwertig ausgebaute 3.5-Zimmerwohnung - B-1.1\"   \n",
-       "4  \"Erstvermietung Neubau Wohnungen an zentraler ...   \n",
-       "\n",
-       "                             Address   Price Rooms  SquareMeters  \\\n",
-       "0          Bahnhofweg 1, 8302 Kloten  2570.0   2.5          73.0   \n",
-       "1          Herrligweg 9, 8048 Zürich  1921.0   1.5          26.0   \n",
-       "2      Poststrasse 47, 8953 Dietikon  2830.0   3.5         104.0   \n",
-       "3  Im Steinacher 3, 8303 Bassersdorf  2950.0   3.5          90.0   \n",
-       "4        Widenstrasse 1, 8302 Kloten  2950.0   3.5          92.0   \n",
-       "\n",
-       "                                         Description  \\\n",
-       "0  Innovation, Komfort und Weitsicht - Wohnen in ...   \n",
-       "1  Wohnperle an ruhiger, zentraler Lage sucht Mie...   \n",
-       "2  Per Herbst 2024 entstehen insgesamt 39 erstkla...   \n",
-       "3  Für Anspruchsvolle: hochwertig ausgebaute 3.5-...   \n",
-       "4  Wir vermieten per 1. Juli 2024 an ruhiger Lage...   \n",
-       "\n",
-       "                                            URL        Date  \\\n",
-       "0  https://www.immoscout24.ch/mieten/4000939090  2024-04-02   \n",
-       "1  https://www.immoscout24.ch/mieten/4000598194  2024-04-02   \n",
-       "2  https://www.immoscout24.ch/mieten/4000895944  2024-04-02   \n",
-       "3  https://www.immoscout24.ch/mieten/4000679565  2024-04-02   \n",
-       "4  https://www.immoscout24.ch/mieten/4000823521  2024-04-02   \n",
-       "\n",
-       "                                                   0    w  ...  a  f  ,  ]  \\\n",
-       "0  {'Verfügbarkeit': '16.05.2024', 'Objekttyp': '...  NaN  ...  X  X  X  X   \n",
-       "1  {'Verfügbarkeit': 'Sofort', 'Objekttyp': 'Wohn...  NaN  ...  X  X  X  X   \n",
-       "2  {'Verfügbarkeit': '01.10.2024', 'Objekttyp': '...  NaN  ...  X  X  X  X   \n",
-       "3  {'Verfügbarkeit': 'Nach Vereinbarung', 'Objekt...  NaN  ...  X  X  X  X   \n",
-       "4  {'Verfügbarkeit': '01.07.2024', 'Objekttyp': '...  NaN  ...  X  X  X  X   \n",
-       "\n",
-       "     W  u  r    I    B  e  \n",
-       "0  NaN  X  X  NaN    X  X  \n",
-       "1  NaN  X  X  NaN  NaN  X  \n",
-       "2    X  X  X  NaN    X  X  \n",
-       "3  NaN  X  X  NaN    X  X  \n",
-       "4  NaN  X  X  NaN    X  X  \n",
-       "\n",
-       "[5 rows x 57 columns]"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 1000 entries, 0 to 999\n",
+      "Data columns (total 57 columns):\n",
+      " #   Column        Non-Null Count  Dtype         \n",
+      "---  ------        --------------  -----         \n",
+      " 0   Title         1000 non-null   object        \n",
+      " 1   Address       1000 non-null   object        \n",
+      " 2   Price         985 non-null    float64       \n",
+      " 3   Rooms         872 non-null    float64       \n",
+      " 4   SquareMeters  870 non-null    float64       \n",
+      " 5   Description   996 non-null    object        \n",
+      " 6   URL           1000 non-null   object        \n",
+      " 7   Date          1000 non-null   datetime64[ns]\n",
+      " 8   0             1000 non-null   object        \n",
+      " 9   w             99 non-null     object        \n",
+      " 10  l             823 non-null    object        \n",
+      " 11  o             767 non-null    object        \n",
+      " 12  z             320 non-null    object        \n",
+      " 13  -             415 non-null    object        \n",
+      " 14  m             260 non-null    object        \n",
+      " 15  K             553 non-null    object        \n",
+      " 16  H             373 non-null    object        \n",
+      " 17  n             837 non-null    object        \n",
+      " 18  N             280 non-null    object        \n",
+      " 19  C             74 non-null     object        \n",
+      " 20  /             594 non-null    object        \n",
+      " 21  T             741 non-null    object        \n",
+      " 22  é             74 non-null     object        \n",
+      " 23                967 non-null    object        \n",
+      " 24  g             495 non-null    object        \n",
+      " 25  h             561 non-null    object        \n",
+      " 26  k             669 non-null    object        \n",
+      " 27  E             13 non-null     object        \n",
+      " 28  A             357 non-null    object        \n",
+      " 29  S             84 non-null     object        \n",
+      " 30  p             326 non-null    object        \n",
+      " 31  d             417 non-null    object        \n",
+      " 32  ä             144 non-null    object        \n",
+      " 33  V             415 non-null    object        \n",
+      " 34  ü             50 non-null     object        \n",
+      " 35  R             220 non-null    object        \n",
+      " 36  t             937 non-null    object        \n",
+      " 37  '             1000 non-null   object        \n",
+      " 38  b             637 non-null    object        \n",
+      " 39  G             420 non-null    object        \n",
+      " 40  M             77 non-null     object        \n",
+      " 41  s             934 non-null    object        \n",
+      " 42  i             773 non-null    object        \n",
+      " 43  L             525 non-null    object        \n",
+      " 44  [             1000 non-null   object        \n",
+      " 45  P             283 non-null    object        \n",
+      " 46  c             518 non-null    object        \n",
+      " 47  a             977 non-null    object        \n",
+      " 48  f             744 non-null    object        \n",
+      " 49  ,             796 non-null    object        \n",
+      " 50  ]             1000 non-null   object        \n",
+      " 51  W             205 non-null    object        \n",
+      " 52  u             863 non-null    object        \n",
+      " 53  r             966 non-null    object        \n",
+      " 54  I             11 non-null     object        \n",
+      " 55  B             615 non-null    object        \n",
+      " 56  e             973 non-null    object        \n",
+      "dtypes: datetime64[ns](1), float64(3), object(53)\n",
+      "memory usage: 445.4+ KB\n"
+     ]
     }
    ],
    "source": [
     "df_cleansing = pd.read_csv('immoscout24_zh_cleansed.csv', sep=';')\n",
-    "df_cleansing.head() "
+    "df_cleansing['Rooms'] = pd.to_numeric(df_cleansing['Rooms'], errors='coerce')\n",
+    "df_cleansing['Date'] = pd.to_datetime(df_cleansing['Date'])\n",
+    "df_cleansing.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "nan_count = df_cleansing['Address'].isna().sum()\n",
+    "print(nan_count)"
    ]
   },
   {
@@ -594,12 +464,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# add the coordinates to the dataframe"
+    "# add the coordinates to the dataframe\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
