Fixed features columns

--- a/immo-project.ipynb
+++ b/immo-project.ipynb
@@ -42,7 +42,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Current working directory: c:\\Users\\FMeic\\data_science\\ADS_Project_group3\n"
+      "Current working directory: /Users/tobiaskoller/Documents/ADS Projekt/ADS_Project_group3-1\n"
      ]
     }
    ],
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -287,7 +287,8 @@
    "source": [
     "df_cleansing = pd.read_csv('immoscout24_zh_all_20240402.csv', sep=';')\n",
     "all_detailed_coreAttributes_list = df_cleansing['CoreAttributes'].tolist()\n",
-    "all_detailed_features_list = df_cleansing['Features'].tolist()\n",
+    "all_features_list_strings = df_cleansing['Features'].tolist()\n",
+    "all_features_list = [json.loads(f_strings.replace(\"'\", '\"')) for f_strings in all_features_list_strings]\n",
     "\n",
     "\n",
     "# Price Data Cleansing\n",
@@ -296,8 +297,7 @@
     "    if cleaned_price:\n",
     "        return int(cleaned_price) # Convert the cleaned string to an integer\n",
     "    else:\n",
-    "        return None  # Return None or 0 if the price is not found or cannot be converted\n",
-    "    \n",
+    "        return None  # Return None or 0 if the price is not found or cannot be converted  \n",
     "# Apply the function to the 'Price' column\n",
     "df_cleansing['Price'] = df_cleansing['Price'].apply(convert_price_to_number)\n",
     "\n",
@@ -309,7 +309,6 @@
     "        return int(cleaned_square_meters) # Convert the cleaned string to an integer\n",
     "    else:\n",
     "        return None  # Return None or 0 if the square meter is not found or cannot be converted\n",
-    "    \n",
     "# Apply the function to the 'SquareMeters' column\n",
     "df_cleansing['SquareMeters'] = df_cleansing['SquareMeters'].apply(convert_square_meters_to_number)\n",
     "    \n",
@@ -321,16 +320,17 @@
     "\n",
     "# Split Features Data\n",
     "def get_unique_values(all_detailed_features_input): # Function to get all unique values in the features list\n",
-    "    unique_values = set()\n",
+    "    unique_fatures = set()\n",
     "    for sublist in all_detailed_features_input:\n",
-    "        unique_values.update(sublist)\n",
-    "    return list(unique_values)\n",
+    "        for features in sublist:\n",
+    "            unique_fatures.update(sublist)\n",
+    "    return list(unique_fatures)\n",
     "\n",
     "# Apply function to get all unique values in the 'Features' column\n",
-    "unique_attributes = get_unique_values(all_detailed_features_list)\n",
+    "unique_attributes = get_unique_values(all_features_list)\n",
     "\n",
     "feature_rows_list = []\n",
-    "for array in all_detailed_features_list:\n",
+    "for array in all_features_list:\n",
     "    feature_row = {attribute: None for attribute in unique_attributes} # Initialize a row with all empty strings\n",
     "    # Mark with 'X' all attributes present in the current array\n",
     "    for attribute in array:\n",
@@ -7997,7 +7997,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
