--- a/sun_hour.ipynb
+++ b/sun_hour.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,13 +12,14 @@
     "\n",
     "pw = \"immoProject\"\n",
     "\n",
-    "latitude = 47.399891\n",
-    "longitude = 8.403275"
+    "latitude = 47.251914978027300\n",
+    "longitude = 8.449590682983400\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -48,17 +49,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "27621.45324175821\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Dates setup\n",
     "today = date.today()\n",
@@ -110,7 +103,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
